[gd_scene load_steps=18 format=2]

[ext_resource path="res://Textures/Entities/Parvotentia/Hand.png" type="Texture" id=1]
[ext_resource path="res://Textures/Entities/Parvotentia/Body.png" type="Texture" id=2]
[ext_resource path="res://Textures/Entities/Parvotentia/Connector.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/Entities/Shield/Shield.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/Managers/HealthManager/HealthManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/Collision/Hitbox/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/Entities/Parvotentia/Parvotentia.gd" type="Script" id=7]
[ext_resource path="res://Components/Collision/Attackbox/Attackbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/Visuals/ParticleSpawner/ParticleSpawner.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5, 5 )

[sub_resource type="CircleShape2D" id=4]
radius = 5.02494

[sub_resource type="Animation" id=10]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ -40.0, 60.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "HandDecay"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body/Connector/Hand:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.219608, 0.027451, 0.160784, 1 ), Color( 0.0666667, 0.027451, 0.117647, 1 ), Color( 0.0666667, 0.027451, 0.117647, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body/Connector:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.215686, 0.0352941, 0.172549, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 1.4 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.4, 0.6 ), Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body/Connector/Hand:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body/Connector:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/Body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/Body:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Parvotentia" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 7 )

[node name="Visuals" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="Visuals"]
position = Vector2( -1, -1 )
texture = ExtResource( 2 )

[node name="Connector" type="Sprite" parent="Visuals/Body"]
position = Vector2( 5, 3 )
texture = ExtResource( 3 )
offset = Vector2( 8, 0 )

[node name="Hand" type="Sprite" parent="Visuals/Body/Connector"]
position = Vector2( 15, 0 )
texture = ExtResource( 1 )
offset = Vector2( 14, 3 )

[node name="Shield" parent="Visuals/Body/Connector/Hand" instance=ExtResource( 4 )]
position = Vector2( 20, 6 )
durability = 4
hitbox_to_protect = NodePath("../../../../../Hitbox")

[node name="ParticleSpawner" parent="Visuals/Body" instance=ExtResource( 9 )]
place_on_z = -1
wait_time = 0.06
particle_to_spawn = "res://Prefabs/Particles/DarkTrail.tscn"

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
health_manager = NodePath("../HealthManager")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Attackbox" parent="." instance=ExtResource( 8 )]
ignore = NodePath("../Hitbox")
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackbox"]
position = Vector2( -1, 0 )
shape = SubResource( 9 )

[node name="HealthManager" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 10 )
anims/HandDecay = SubResource( 5 )
anims/Hit = SubResource( 8 )
anims/Jump = SubResource( 7 )
anims/RESET = SubResource( 6 )

[connection signal="shield_down" from="Visuals/Body/Connector/Hand/Shield" to="." method="_on_Shield_shield_down"]
[connection signal="on_hit" from="Hitbox" to="." method="_on_Hitbox_on_hit"]
[connection signal="health_depleted" from="HealthManager" to="." method="_on_HealthManager_health_depleted"]
